Added some feedback when there's an error on the service call

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Comics</string>
+    <string name="error_message">Something went wrong! Make sure you have connection and try again, please!</string>
 </resources>
