--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Comics</string>
     <string name="error_message">Something went wrong! Make sure you have connection and try again, please!</string>
+    <string name="base_url">http://gateway.marvel.com/v1/public/</string>
 </resources>
